--- a/index.css
+++ b/index.css
@@ -1,33 +1,107 @@
 body {
     background: rgb(236, 187, 118);
-    background: linear-gradient(180deg, rgba(236, 187, 118, 1) 7%, rgba(247, 227, 199, 1) 23%, rgba(255, 255, 255, 1) 57%);
+    background: linear-gradient(180deg, rgba(236, 171, 118, 1) 2%, rgba(247, 227, 199, 1) 11%, rgba(255, 255, 255, 1) 25%);
     background-repeat: no-repeat;
     font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
+    font-weight: 600;
     color: rgb(92, 38, 38);
     margin: 1rem;
     display: flex;
     flex-direction: column;
 }
 
+.nav-list {
+    justify-self: flex-end;
+}
+
+li {
+    display: inline;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    padding: 2rem;
+}
+
+a:hover,
+a:active {
+    text-decoration: underline;
+}
+
+.active {
+    text-decoration: underline;
+}
+
 .text {
     text-align: left;
 }
 
+.navbar {
+    display: flex;
+    flex-direction: row;
+}
+
 .main-view {
     text-align: center;
-    margin-top: 6%;
+    margin-top: 2%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 3rem;
+    grid-column-gap: 20rem;
+    margin-bottom: 5%;
+    padding: 6rem;
 }
 
 .item {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+}
+
+.item-1 {
+    display: flex;
+    justify-self: flex-start;
+}
+
+.item-2 {
     align-items: center;
 }
 
-.item1 {
-    flex-direction: column;
+.item-3,
+.item-4,
+.item-5,
+.item-6 {
+    -webkit-box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+    -moz-box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+    box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+    border-radius: 4%;
+}
+
+.my-input {
+    width: 15rem;
+    height: 2.5rem;
+    border: none;
+    background: transparent;
+    border-radius: 5%;
+    opacity: 20%;
+    -webkit-box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+    -moz-box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+    box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
+}
+
+.bottom-view {
+    margin-left: -1.3%;
+    width: 102.6%;
+    height: 30rem;
+    background: rgb(236, 171, 118);
+}
+
+.footer {
+    height: 3rem;
+}
+
+.footer-text {
+    opacity: 50%;
+    color: black;
 }
