--- a/index.css
+++ b/index.css
@@ -70,6 +70,15 @@ a:hover {
     -moz-box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
     box-shadow: 0px 5px 6px 1px rgba(170, 170, 173, 1);
     border-radius: 4%;
+    transition: transform 1s;
+}
+
+.item-4:hover, .item-6:hover {
+    transform: rotate(7deg);
+}
+
+.item-3:hover, .item-5:hover {
+    transform: rotate(-7deg);
 }
 
 .my-input {
